--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,10 @@
   },
   "dependencies": {
     "@splidejs/splide": "^4.1.4",
-    "axios": "^1.6.5",
-    "next": "14.0.4",
-    "react": "^18",
-    "react-dom": "^18",
+    "axios": "^1.6.7",
+    "next": "^14.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-multi-carousel": "^2.8.4"
   },
   "devDependencies": {
